@@ -85,3 +85,6 @@
   tau values.  This might be more efficient.
 
 - Frobenius test checks if the input is a perfect square.  We shouldn't.
+
+- We could do LLR and Proth in prob_prime and return 1 instead of 2, leaving
+  certs possible.
