@@ -32,6 +32,7 @@ extern int  _GMP_is_prime(mpz_t n);
 extern int  _GMP_is_prob_prime(mpz_t n);
 extern int  _GMP_is_provable_prime(mpz_t n, char ** prooftext);
 extern int  _GMP_is_aks_prime(mpz_t n);
+extern int  is_miller_prime(mpz_t n, int assume_grh);
 extern int  _GMP_BPSW(mpz_t n);
 extern void _GMP_next_prime(mpz_t n);
 extern void _GMP_prev_prime(mpz_t n);
